--- a/WebTour/src/main/resources/templates/Admin/home.html
+++ b/WebTour/src/main/resources/templates/Admin/home.html
@@ -74,9 +74,7 @@
 											class="remove-tooltip-title rounded-tooltip-value"></div>
 									</div>
 									<p class="text-sm mb-0">
-										Increase by <span
-											class="bg-success-focus px-1 rounded-2 fw-medium text-success-main text-sm"></span>
-										this week
+										Số tài khoản được tạo trong 7 tháng qua
 									</p>
 								</div>
 							</div>
@@ -104,9 +102,7 @@
 											class="remove-tooltip-title rounded-tooltip-value"></div>
 									</div>
 									<p class="text-sm mb-0">
-										Increase by <span
-											class="bg-success-focus px-1 rounded-2 fw-medium text-success-main text-sm"></span>
-										this week
+										Số khách du lịch trong 7 tháng qua
 									</p>
 								</div>
 							</div>
@@ -134,9 +130,7 @@
 											class="remove-tooltip-title rounded-tooltip-value"></div>
 									</div>
 									<p class="text-sm mb-0">
-										Increase by <span
-											class="bg-danger-focus px-1 rounded-2 fw-medium text-danger-main text-sm"></span>
-										this week
+										Số lượng đặt tour trong 7 tháng qua
 									</p>
 								</div>
 							</div>
@@ -165,9 +159,7 @@
 											class="remove-tooltip-title rounded-tooltip-value"></div>
 									</div>
 									<p class="text-sm mb-0">
-										Increase by <span
-											class="bg-success-focus px-1 rounded-2 fw-medium text-success-main text-sm">+5%</span>
-										this week
+										Doanh thu trong 7 tháng qua so với mong muốn 
 									</p>
 								</div>
 							</div>
@@ -195,9 +187,7 @@
 											class="remove-tooltip-title rounded-tooltip-value"></div>
 									</div>
 									<p class="text-sm mb-0">
-										Increase by <span
-											class="bg-success-focus px-1 rounded-2 fw-medium text-success-main text-sm"></span>
-										this week
+										Số sao đánh gia tour trong 7 tháng
 									</p>
 								</div>
 							</div>
@@ -227,9 +217,7 @@
 											class="remove-tooltip-title rounded-tooltip-value"></div>
 									</div>
 									<p class="text-sm mb-0">
-										Increase by <span
-											class="bg-success-focus px-1 rounded-2 fw-medium text-success-main text-sm">+$15k</span>
-										this week
+										Lợi nhuận trong 7 tháng qua
 									</p>
 								</div>
 							</div>
@@ -270,72 +258,7 @@
 				</div>
 				<!-- Top performance End -->
 
-				<!-- Earning Static start -->
-				<div class="col-xxl-12">
-					<div class="card h-100 radius-8 border-0">
-						<div class="card-body p-24">
-							<div
-								class="d-flex align-items-center flex-wrap gap-2 justify-content-between">
-								<div>
-									<h6 class="mb-2 fw-bold text-lg">Earning Statistic</h6>
-									<span class="text-sm fw-medium text-secondary-light">Yearly
-										earning overview</span>
-								</div>
-								<div class="">
-									<select
-										class="form-select form-select-sm w-auto bg-base border text-secondary-light">
-										<option>Yearly</option>
-										<option>Monthly</option>
-										<option>Weekly</option>
-										<option>Today</option>
-									</select>
-								</div>
-							</div>
-
-							<div class="mt-20 d-flex justify-content-center flex-wrap gap-3">
-
-								<div
-									class="d-inline-flex align-items-center gap-2 p-2 radius-8 border pe-36 br-hover-primary group-item">
-									<span
-										class="bg-neutral-100 w-44-px h-44-px text-xxl radius-8 d-flex justify-content-center align-items-center text-secondary-light group-hover:bg-primary-600 group-hover:text-white">
-										<iconify-icon icon="fluent:cart-16-filled" class="icon"></iconify-icon>
-									</span>
-									<div>
-										<span class="text-secondary-light text-sm fw-medium">Sales</span>
-										<h6 class="text-md fw-semibold mb-0">$200k</h6>
-									</div>
-								</div>
-
-								<div
-									class="d-inline-flex align-items-center gap-2 p-2 radius-8 border pe-36 br-hover-primary group-item">
-									<span
-										class="bg-neutral-100 w-44-px h-44-px text-xxl radius-8 d-flex justify-content-center align-items-center text-secondary-light group-hover:bg-primary-600 group-hover:text-white">
-										<iconify-icon icon="uis:chart" class="icon"></iconify-icon>
-									</span>
-									<div>
-										<span class="text-secondary-light text-sm fw-medium">Income</span>
-										<h6 class="text-md fw-semibold mb-0">$200k</h6>
-									</div>
-								</div>
-
-								<div
-									class="d-inline-flex align-items-center gap-2 p-2 radius-8 border pe-36 br-hover-primary group-item">
-									<span
-										class="bg-neutral-100 w-44-px h-44-px text-xxl radius-8 d-flex justify-content-center align-items-center text-secondary-light group-hover:bg-primary-600 group-hover:text-white">
-										<iconify-icon icon="ph:arrow-fat-up-fill" class="icon"></iconify-icon>
-									</span>
-									<div>
-										<span class="text-secondary-light text-sm fw-medium">Profit</span>
-										<h6 class="text-md fw-semibold mb-0">$200k</h6>
-									</div>
-								</div>
-							</div>
-
-							<div id="barChart"></div>
-						</div>
-					</div>
-				</div>
-				<!-- Earning Static End -->
+				
 
 
 				<!-- Latest Performance Start -->
@@ -423,7 +346,7 @@
 									</thead>
 									<tbody id="body-table-momo">
 										<tr th:each="item : ${listMomo}">
-											<td class="text-center align-middle" th:text="${item.momoId}"></td>
+											<td class="text-center align-middle" th:text="${item.captureId}"></td>
 											<td class="text-center align-middle"
 												th:text="${item.bookingId}"></td>
 											<td class="text-center align-middle"
@@ -441,9 +364,9 @@
 							</div>
 						</div>
 
-						<div class="pagination-container" th:if="${totalPagesMomo > 1}"
+						<div class="pagination-container" 
 							id="pagination-container-momo">
-							<ul class="pagination" id="pagination">
+							<ul class="pagination" id="pagination" th:if="${totalPagesMomo > 1}">
 								<li th:if="${currentPageMomo > 0}">
 									<button
 										th:attr="onclick='handleFilterMomo(' + (${currentPageMomo - 1}) + ')'">
@@ -568,8 +491,8 @@
 						</div>
 
 						<div class="pagination-container" id="pagination-container-paypal"
-							th:if="${totalPagesPaypal > 1}">
-							<ul class="pagination" id="pagination">
+							>
+							<ul class="pagination" id="pagination" th:if="${totalPagesPaypal > 1}">
 								<li th:if="${currentPagePaypal > 0}">
 									<button
 										th:attr="onclick='handleFilterPaypal(' + (${currentPagePaypal - 1}) + ')'">
