--- a/WebTour/src/main/resources/templates/User/change-password.html
+++ b/WebTour/src/main/resources/templates/User/change-password.html
@@ -103,19 +103,25 @@ a:hover{
 		<div class="left">
 			<h2>TRANG TÀI KHOẢN</h2>
 			<p>
-				<strong>Xin chào, <span>Đỗ Nam</span>!
+				<strong>Xin chào, <span th:text="${user.fullName}">Đỗ
+						Nam</span>!
 				</strong>
 			</p>
 			<p>
-				<a id="account" href="/account">Thông tin tài khoản</a>
+				<a th:href="@{/account(userId=${user.user_id})}">Thông tin tài
+					khoản</a>
 			</p>
 			<p>
-				<a id="mybooking" href="/account/tour-booking">Đơn hàng của bạn</a>
+				<a th:href="@{/account/get-order(userId=${user.user_id})}">Đơn
+					hàng của bạn</a>
 			</p>
 			<p>
-				<a href="/account/change-password">Đổi mật khẩu</a>
+				<a th:href="@{/account/change-password(userId=${user.user_id})}">Đổi mật khẩu</a>
 			</p>
-			
+			<p>
+				<a th:href="@{/account/get-vouchers(userId=${user.user_id})}">Mã
+					giảm giá của bạn</a>
+			</p>
 		</div>
 		<div class="right">
 			<div class="empty-div"></div>
@@ -193,8 +199,8 @@ a:hover{
 	            return;
 	        }
 
-	        // Lấy ID người dùng từ sessionStorage
-	        const userId = sessionStorage.getItem("userId");
+	        var account = await getProfile();
+	        const userId = account.user.user_id;
 	        if (!userId) {
 	            alert("Không tìm thấy người dùng. Vui lòng đăng nhập lại.");
 	            return;
