--- a/WebTour/src/main/resources/templates/User/order.html
+++ b/WebTour/src/main/resources/templates/User/order.html
@@ -91,6 +91,8 @@
 						<td class="table-td">
 							<!-- Thanh toán --> <span th:if="${booking[2] == 1}">Cash</span>
 							<span th:if="${booking[2] == 2}">Online</span>
+							<span th:if="${booking[2] == 3}">Online - Momo</span>
+							<span th:if="${booking[2] == 4}">Online - Paypal</span>
 						</td>
 						
 						<td class="table-td">
