--- a/WebTour/src/main/resources/templates/forgotPassword.html
+++ b/WebTour/src/main/resources/templates/forgotPassword.html
@@ -13,7 +13,7 @@
 			<form>
 				<h1>Forgot your password</h1>
 				<input id="user-name-forgot" type="text" placeholder="User name" required/>
-				<button onClick="handleSendMailPassword(event)">Send Password</button>
+				<button class="button-form" onClick="handleSendMailPassword(event)">Send Password</button>
 			</form>
 		</div>
 		<div class="overlay-container">
@@ -21,7 +21,7 @@
 				<div class="overlay-panel overlay-right">
 					<h1>Welcome Back!</h1>
 					<p>To keep connected with us please login with your personal info</p>
-					<button class="ghost" id="signIn" onClick="navigateLoginForm()">Sign In</button>
+					<button class="ghost button-form" id="signIn" onClick="navigateLoginForm()">Sign In</button>
 				</div>
 			</div>
 		</div>
