--- a/WebTour/src/main/resources/templates/User/payment.html
+++ b/WebTour/src/main/resources/templates/User/payment.html
@@ -13,15 +13,15 @@
 <link rel="stylesheet" href="/css/loading.css">
 </head>
 <body>
-<!-- <div class="loading-container" id="loading-content">
+<div class="loading-container" id="loading-content">
         <div class="center-icon">
-            <img src="eiffel-tower-icon.svg" alt="Eiffel Tower">
+            <img src="../imagess/background_light_v1.jpg" alt="Eiffel Tower">
         </div>
         <div class="orbit">
             <div class="plane plane-blue"></div>
             <div class="plane plane-yellow"></div>
         </div>
-    </div> -->
+    </div>
 <header id="header"></header>
 	<div class="container-content">
 		<div class="left">
