--- a/WebTour/src/main/resources/templates/User/vouchers.html
+++ b/WebTour/src/main/resources/templates/User/vouchers.html
@@ -30,7 +30,7 @@
 					hàng của bạn</a>
 			</p>
 			<p>
-				<a href="\account\change-password">Đổi mật khẩu</a>
+				<a th:href="@{/account/change-password(userId=${user.user_id})}">Đổi mật khẩu</a>
 			</p>
 			<p>
 				<a th:href="@{/account/get-vouchers(userId=${user.user_id})}">Mã
@@ -53,53 +53,13 @@
 							Có hiệu lực từ: <span th:text="${voucher.startDate}"></span> - <span
 								th:text="${voucher.endDate}"></span>
 						</div>
-						<div class="button">Dùng Sau</div>
 					</div>
 				</div>
 
 			</div>
 
 
-			<div class="pagination-container">
-				<ul class="pagination" id="pagination">
-					<!-- Prev Icon -->
-					<li th:if="${currentPage > 0}"><a
-						th:href="@{/account/get-vouchers(userId=${user.user_id}, page=${currentPage - 1}, size=5)}">
-							<i class="fas fa-chevron-left icon"></i>
-					</a></li>
-
-					<!-- First Page -->
-					<li><a
-						th:href="@{/account/get-vouchers(userId=${user.user_id}, page=0, size=5)}"
-						th:class="${currentPage == 0} ? 'active' : ''">1</a></li>
-
-					<!-- Dots before current range -->
-					<li th:if="${currentPage > 2}"><span>...</span></li>
-
-					<!-- Middle Pages -->
-					<li
-						th:each="i : ${#numbers.sequence(currentPage - 1, currentPage + 1)}"
-						th:if="${i > 0 and i < totalPages - 1}"><a
-						th:href="@{/account/get-vouchers(userId=${user.user_id}, page=${i}, size=5)}"
-						th:class="${currentPage == i} ? 'active' : ''" th:text="${i + 1}">
-					</a></li>
-
-					<!-- Dots after current range -->
-					<li th:if="${currentPage < totalPages - 3}"><span>...</span></li>
-
-					<!-- Last Page -->
-					<li th:if="${totalPages > 1}"><a
-						th:href="@{/account/get-vouchers(userId=${user.user_id}, page=${totalPages - 1}, size=5)}"
-						th:class="${currentPage == totalPages - 1} ? 'active' : ''"
-						th:text="${totalPages}"> </a></li>
-
-					<!-- Next Icon -->
-					<li th:if="${currentPage + 1 < totalPages}"><a
-						th:href="@{/account/get-vouchers(userId=${user.user_id}, page=${currentPage + 1}, size=5)}">
-							<i class="fas fa-chevron-right icon"></i>
-					</a></li>
-				</ul>
-			</div>
+			
 		</div>
 	</div>
 
